<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="eu.yalacirodev.sokoban.MainActivity">
    <item
        android:id="@+id/action_levels"
        android:orderInCategory="100"
        android:title="@string/level"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_solve"
        android:orderInCategory="100"
        android:title="@string/action_solve"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reset"
        android:orderInCategory="100"
        android:title="@string/action_reset"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_zoom"
        android:orderInCategory="100"
        android:title="@string/action_zoom"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_unzoom"
        android:orderInCategory="100"
        android:title="@string/action_unzoom"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_instructions"
        android:orderInCategory="100"
        android:title="@string/action_instructions"
        app:showAsAction="never" />
</menu>
